UC: Zgłoś uwagę - Zaimplementowanie zgłaszania uwag i wyświetlania ich w panelu administratora.

--- a/src/app/components/panel-administratora/panel-administratora.component.html
+++ b/src/app/components/panel-administratora/panel-administratora.component.html
@@ -4,6 +4,7 @@
       <!--<a mat-list-item routerLink="/administrator/edytuj_opis"> Edytuj zapoznanie się z serwisem </a>-->
       <!--<a mat-list-item routerLink="/regulamin/dodaj"> Dodaj regulamin </a>-->
       <a mat-list-item routerLink="/administrator/zgloszeniauzytkownikow"> Przejrzyj zgłoszenia użytkowników </a>
+      <a mat-list-item routerLink="/administrator/uwagi"> Przejrzyj uwagi </a>
     </mat-nav-list>
   </mat-card-content>
 </mat-card>
