UC: Zgłoś ofertę - Zaimplementowanie zgłaszania ofert i wyświetlania ich w panelu administratora.

--- a/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
+++ b/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
@@ -9,6 +9,6 @@
           #elseBlock2>Nie</ng-template></ng-template><br/>
       </ng-container>
     </span><br/>
-    <!--<button mat-raised-button color="warn" (click)="zglosOferte()">Zgłoś oferte</button>-->
+    <button mat-raised-button color="warn" (click)="zglosOferte()">Zgłoś oferte</button>
   </mat-card-content>
 </mat-card>
