UC: Przejrzyj dostępne oferty - utworzenie komponentu odpowiedzialnego za wyświetlanie listy dostępnych ofert, dodanie pozycji w menu i zmodyfikowanie usługi ofert, aby pozwalała na skorzystanie z metody zwracającej listę ofert

--- a/src/app/components/dodawanie-oferty/dodawanie-oferty.component.html
+++ b/src/app/components/dodawanie-oferty/dodawanie-oferty.component.html
@@ -168,8 +168,9 @@
 
       <mat-slide-toggle required formControlName="czyWyroznic">Czy wyróżnić ofertę?</mat-slide-toggle>
       <br><br>
-      <!--<button mat-raised-button color="primary" [disabled]="this.dodawanieOfertyForm.invalid" (click)="wystaw()">Wystaw ofertę</button>-->
-      <button mat-raised-button color="primary" (click)="wystaw()">Wystaw ofertę</button>
+      <button mat-raised-button color="primary" [disabled]="this.dodawanieOfertyForm.invalid" (click)="wystaw()">Wystaw
+        ofertę
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
