Przeniesienie logiki biznesowej z konstruktora do metody wywoływanej podczas inicjalizacji komponentu w komponencie dodawania oferty; dodanie przypisania użytkownika do oferty podczas jej dodawania; wyłączenie niezaimplementowanego linku do edycji profilu w panelu użytkownika; poprawienie stron przeglądania oferty i użytkownika i dodanie animacji ładowania do tych stron oraz strony przeglądania ofert; zmiana wersji aplikacji na v0.0.3.

--- a/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
+++ b/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
@@ -5,7 +5,7 @@
         Pokaż profil </a>
       <a mat-list-item routerLink="/oferta/wystaw"> Wystaw ofertę </a>
       <!--<a mat-list-item routerLink="/oferta/edytuj"> Edytuj ofertę </a>-->
-      <a mat-list-item routerLink="/uzytkownik/edytuj_profil"> Edytuj profil </a>
+      <!--<a mat-list-item routerLink="/uzytkownik/edytuj_profil"> Edytuj profil </a>-->
       <!--<a mat-list-item routerLink="/wiadomosc/wyslij"> Napisz wiadomość </a>-->
       <!--<a mat-list-item routerLink="/transakcja/ocen"> Oceń transakcję </a>-->
       <!--<a mat-list-item routerLink="/transakcja/zglos"> Zgłoś transakcję </a>-->
