--- a/src/app/components/przejrzyj-profil/przejrzyj-profil.component.html
+++ b/src/app/components/przejrzyj-profil/przejrzyj-profil.component.html
@@ -5,27 +5,35 @@
   </mat-card-title>
   <mat-card-content>
     <mat-spinner *ngIf="!uzytkownik"></mat-spinner>
-    <div class="mat-table" *ngIf="uzytkownik">
-      <div class="mat-row">
-        <div class="mat-cell" flex-gt-xs="25"><strong>Imię i nazwisko</strong></div>
-        <div class="mat-cell">{{ uzytkownik.imie }} {{ uzytkownik.nazwisko }}</div>
-      </div>
-      <div class="mat-row">
-        <div class="mat-cell" flex-gt-xs="25"><strong>Data urodzenia</strong></div>
-        <div class="mat-cell"> {{ uzytkownik.dataUrodzenia | date: 'dd.MM.yyyy' }}</div>
-      </div>
-      <div class="mat-row">
-        <div class="mat-cell" flex-gt-xs="25"><strong>Adres zamieszkania</strong></div>
-        <div class="mat-cell" flex-gt-xs="25">{{ uzytkownik.ulica }}, {{ uzytkownik.miejscowosc }}, woj. {{
-          uzytkownik.wojewodztwo }}
+    <ng-container *ngIf="uzytkownik">
+      <ng-container *ngIf="!uzytkownik.zablokowany; else elseBlock">
+        <div class="mat-table">
+          <div class="mat-row">
+            <div class="mat-cell" flex-gt-xs="25"><strong>Imię i nazwisko</strong></div>
+            <div class="mat-cell">{{ uzytkownik.imie }} {{ uzytkownik.nazwisko }}</div>
+          </div>
+          <div class="mat-row">
+            <div class="mat-cell" flex-gt-xs="25"><strong>Data urodzenia</strong></div>
+            <div class="mat-cell"> {{ uzytkownik.dataUrodzenia | date: 'dd.MM.yyyy' }}</div>
+          </div>
+          <div class="mat-row">
+            <div class="mat-cell" flex-gt-xs="25"><strong>Adres zamieszkania</strong></div>
+            <div class="mat-cell" flex-gt-xs="25">{{ uzytkownik.ulica }}, {{ uzytkownik.miejscowosc }}, woj. {{
+              uzytkownik.wojewodztwo }}
+            </div>
+          </div>
+          <div class="mat-row">
+            <div class="mat-cell" flex-gt-xs="25"><strong>Numer telefonu</strong></div>
+            <div class="mat-cell">{{ uzytkownik.numerTelefonu }}</div>
+          </div>
         </div>
-      </div>
-      <div class="mat-row">
-        <div class="mat-cell" flex-gt-xs="25"><strong>Numer telefonu</strong></div>
-        <div class="mat-cell">{{ uzytkownik.numerTelefonu }}</div>
-      </div>
-    </div>
-    <br/>
-    <button mat-raised-button color="warn" (click)="zglosUzytkownika(login)">Zgłoś użytkownika</button>
+        <br/>
+        <button mat-raised-button color="warn" (click)="zglosUzytkownika(login)">Zgłoś użytkownika</button>
+        <button *ngIf="zalogowanyUzytkownik && zalogowanyUzytkownik.rola === 'ROLE_ADMIN'" mat-raised-button
+                color="warn" (click)="zablokujUzytkownika(login, uzytkownik)">Zablokuj użytkownika
+        </button>
+      </ng-container>
+      <ng-template #elseBlock>Uzytkownik jest zablokowany.</ng-template>
+    </ng-container>
   </mat-card-content>
 </mat-card>
