--- a/src/app/components/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
+++ b/src/app/components/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
@@ -7,18 +7,31 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-select placeholder="Powód zgłoszenia" formControlName="powod">
+        <mat-select placeholder="Powód zgłoszenia" formControlName="powod" required>
           <mat-option *ngFor="let powod of powody" [value]="powod">
             {{ powod.value }}
           </mat-option>
         </mat-select>
+        <mat-hint>Wybierz jeden z powodów zgłoszenia występujących na liście</mat-hint>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <textarea matInput placeholder="Treść wiadomości" matTextareaAutosize matAutosizeMinRows="4"
-                  matAutosizeMaxRows="20" formControlName="tresc"></textarea>
+                  matAutosizeMaxRows="20" formControlName="tresc" #textarea required maxlength="500"></textarea>
+        <mat-error
+          *ngIf="this.zglosUzytkownikaForm.controls['tresc'].invalid && this.zglosUzytkownikaForm.controls['tresc'].errors.minlength">
+          Długość opisu zgłoszenia musi wynosić co najmniej 40 znaków
+        </mat-error>
+        <mat-error
+          *ngIf="this.zglosUzytkownikaForm.controls['tresc'].invalid && this.zglosUzytkownikaForm.controls['tresc'].errors.maxlength">
+          Długość opisu zgłoszenia musi wynosić co najwyżej 500 znaków
+        </mat-error>
+        <mat-hint>Wprowadź opis (min. 40 znaków, max. 500 znaków</mat-hint>
+        <mat-hint align="end">{{ textarea.value?.length || 0 }}/500</mat-hint>
       </mat-form-field>
-      <button mat-raised-button color="primary" (click)="zglos()">Zgłoś</button>
+      <br><br>
+      <button mat-raised-button color="primary" [disabled]="this.zglosUzytkownikaForm.invalid" (click)="zglos()">Zgłoś
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
