--- a/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
+++ b/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
@@ -28,17 +28,25 @@
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Data urodzenia" formControlName="dataUrodzenia"
                [value]="zalogowanyUzytkownik.dataUrodzenia | date: 'dd.MM.yyyy'">
-        <mat-hint>W formacie rrrr-mm-dd.</mat-hint>
+        <mat-hint>W formacie dd-mm-rrrr.</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Województwo" formControlName="wojewodztwo"
-               [value]="zalogowanyUzytkownik.wojewodztwo">
-        <mat-hint>Wpisz województwo!</mat-hint>
+        <mat-select matInput placeholder="Województwo" formControlName="wojewodztwo" [value]="zalogowanyUzytkownik.wojewodztwo">
+          <mat-option value="Mazowieckie">Mazowieckie</mat-option>
+          <mat-option value="Lubelskie">Lubelskie</mat-option>
+          <mat-option value="Wielkopolskie">Wielkopolskie</mat-option>
+        </mat-select>
+        <mat-hint>Wybierz jedno z województw występujących na liście</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Miejscowość" formControlName="miejscowosc"
-               [value]="zalogowanyUzytkownik.miejscowosc">
-        <mat-hint>Wpisz miejscowość!</mat-hint>
+        <mat-select matInput placeholder="Miejscowość" formControlName="miejscowosc" [value]="zalogowanyUzytkownik.miejscowosc">
+          <mat-option value="Warszawa">Warszawa</mat-option>
+          <mat-option value="Kraków">Kraków</mat-option>
+          <mat-option value="Pruszków">Pruszków</mat-option>
+          <mat-option value="Halinów">Halinów</mat-option>
+          <mat-option value="Ostrów Mazowiecka">Ostrów Mazowiecka</mat-option>
+        </mat-select>
+        <mat-hint>Wybierz jedno z miast występujących na liście</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Ulica" formControlName="ulica" [value]="zalogowanyUzytkownik.ulica">
