--- a/src/app/components/logowanie/logowanie.component.html
+++ b/src/app/components/logowanie/logowanie.component.html
@@ -6,11 +6,11 @@
   <mat-card-content>
     <form class="example-form" [formGroup]="logowanieForm">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Login" formControlName="login">
+        <input matInput placeholder="Login" formControlName="login" required>
         <mat-hint>Wpisz login!</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Hasło" formControlName="haslo">
+        <input matInput type="password" placeholder="Hasło" formControlName="haslo" required>
         <mat-hint>Wpisz hasło!</mat-hint>
       </mat-form-field>
       <br><br>
